# fastapi_course

./: .gitignore  README.md
no_ht/: docker-compose.yaml  justfile  log_conf.yaml  pyproject.toml
no_ht/alembic/: env.py
no_ht/alembic/versions/: 9dbf70db85b8_init.py
no_ht/app/: main.py
no_ht/app/core/: db.py  settings.py
no_ht/app/posts/: routes.py
no_ht/app/projects/: db.py  model.py  repository.py  routes.py  schema.py  service.py
no_ht/app/rand/: routes.py  schema.py
no_ht/app/tasks/: repository.py  routes.py  schema.py  service.py
twitter_analog/: README.md  docker-compose.yaml  justfile  log_conf.yaml  pyproject.toml
twitter_analog/alembic/: env.py
twitter_analog/alembic/versions/: de626c141e13_init.py
twitter_analog/app/: main.py
twitter_analog/app/core/: settings.py
twitter_analog/app/posts/: model.py  repositories.py  routes.py  schema.py  services.py
