[project]
name = "twitter-analog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.5",
    "sqlalchemy[asyncio]>=2.0.48",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
